name:            memoplex
version:         0.1
license:         GPL
license-file:    LICENSE
author:          dan corson <danl@alum.mit.edu>
synopsis:        notifier service
build-type:      Simple
build-depends:   base >= 4, haskell98, mtl, network, random, stm, HDBC,
                 HDBC-postgresql

executable:      memoplex
main-is:         Main.hs
hs-source-dirs:  src
