name:            memoplex
version:         0.1
license:         GPL
license-file:    LICENSE
author:          dan corson <danl@alum.mit.edu>
synopsis:        notifier service
build-type:      Simple
build-depends:
    base
  , directory
  , filepath
  , HDBC
  , HDBC-sqlite3
  , mtl
  , network
  , process
  , random
  , stm
  , unix

executable:      memoplex
main-is:         Main.hs
hs-source-dirs:  src
